Create initial HTML structure for showcase website
Added structure and sections for the showcase website.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Showcase Website</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+  <!-- HEADER / NAVIGATION -->
+  <header id="header">
+    <nav id="navbar">
+      <div id="brand">
+        <!-- Brand name / Logo -->
+      </div>
+
+      <ul id="nav-links">
+        <li>Home</li>
+        <li>About</li>
+        <li>Showcase</li>
+        <li>Authenticity</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- HERO SECTION -->
+  <section id="hero">
+    <!-- Main headline -->
+    <!-- Sub-headline -->
+    <!-- Primary visual -->
+    <!-- Call-to-action buttons -->
+  </section>
+
+  <!-- ABOUT SECTION -->
+  <section id="about">
+    <!-- Section heading -->
+    <!-- Intro paragraph -->
+    <!-- Highlights / bullet points -->
+    <!-- Optional image -->
+  </section>
+
+  <!-- SHOWCASE / WORK SECTION -->
+  <section id="showcase">
+    <!-- Section heading -->
+    <!-- Grid layout -->
+    <!-- Each item: image + title + short description -->
+  </section>
+
+  <!-- PROCESS / PHILOSOPHY SECTION -->
+  <section id="process">
+    <!-- Steps or philosophy blocks -->
+  </section>
+
+  <!-- AUTHENTICITY / TRUST SECTION -->
+  <section id="authenticity">
+    <!-- Identity details -->
+    <!-- Location -->
+    <!-- Real photos -->
+    <!-- Social links -->
+    <!-- Proof elements -->
+  </section>
+
+  <!-- CONTACT SECTION -->
+  <section id="contact">
+    <!-- Email -->
+    <!-- Phone / WhatsApp -->
+    <!-- Contact form -->
+  </section>
+
+  <!-- FOOTER -->
+  <footer id="footer">
+    <!-- Brand -->
+    <!-- Quick links -->
+    <!-- Copyright -->
+  </footer>
+
+  <!-- JS -->
+  <script src="js/main.js"></script>
+</body>
+</html>
 
