Implement hero section with content and actions
Added hero section with headline, supporting statement, and action buttons.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,22 @@
   </header>
 
   <!-- HERO SECTION -->
-  <section id="hero">
-    <!-- Main headline -->
-    <!-- Sub-headline -->
-    <!-- Primary visual -->
-    <!-- Call-to-action buttons -->
-  </section>
+ <section id="hero">
+  <div class="hero-content">
+    <h1>Main headline goes here</h1>
+    <p>Short supporting statement goes here</p>
+
+    <div class="hero-actions">
+      <button>Primary Action</button>
+      <button>Secondary Action</button>
+    </div>
+  </div>
+
+  <div class="hero-visual">
+    <!-- Image / illustration placeholder -->
+  </div>
+</section>
+
 
   <!-- ABOUT SECTION -->
   <section id="about">
