Create About section with introduction and highlights
Added an 'About' section with highlights and an optional image.

--- a/index.html
+++ b/index.html
@@ -46,12 +46,23 @@
 
 
   <!-- ABOUT SECTION -->
-  <section id="about">
-    <!-- Section heading -->
-    <!-- Intro paragraph -->
-    <!-- Highlights / bullet points -->
-    <!-- Optional image -->
-  </section>
+ <section id="about">
+  <div class="about-container">
+    <h2>About Me / Brand</h2>
+    <p>Short introduction about your background, vision, or expertise.</p>
+
+    <ul class="about-highlights">
+      <li>Highlight 1: Experience / skill</li>
+      <li>Highlight 2: Focus area / specialty</li>
+      <li>Highlight 3: Key achievement / capability</li>
+    </ul>
+
+    <div class="about-image">
+      <!-- Optional placeholder for image -->
+    </div>
+  </div>
+</section>
+
 
   <!-- SHOWCASE / WORK SECTION -->
   <section id="showcase">
