Implement showcase section with project items
Added a showcase section with grid layout for projects.

--- a/index.html
+++ b/index.html
@@ -66,10 +66,33 @@
 
   <!-- SHOWCASE / WORK SECTION -->
   <section id="showcase">
-    <!-- Section heading -->
-    <!-- Grid layout -->
-    <!-- Each item: image + title + short description -->
-  </section>
+  <div class="showcase-container">
+    <h2>Showcase / Work</h2>
+
+    <div class="showcase-grid">
+      <!-- Example item 1 -->
+      <div class="showcase-item">
+        <div class="item-image">
+          <!-- Placeholder for image -->
+        </div>
+        <h3>Project / Product Title</h3>
+        <p>Short description of project or product.</p>
+      </div>
+
+      <!-- Example item 2 -->
+      <div class="showcase-item">
+        <div class="item-image">
+          <!-- Placeholder for image -->
+        </div>
+        <h3>Project / Product Title</h3>
+        <p>Short description of project or product.</p>
+      </div>
+
+      <!-- Repeat more items as needed -->
+    </div>
+  </div>
+</section>
+
 
   <!-- PROCESS / PHILOSOPHY SECTION -->
   <section id="process">
