Add authenticity and trust section to index.html

--- a/index.html
+++ b/index.html
@@ -101,12 +101,34 @@
 
   <!-- AUTHENTICITY / TRUST SECTION -->
   <section id="authenticity">
-    <!-- Identity details -->
-    <!-- Location -->
-    <!-- Real photos -->
-    <!-- Social links -->
-    <!-- Proof elements -->
-  </section>
+  <div class="auth-container">
+    <h2>Authenticity & Trust</h2>
+
+    <div class="identity-details">
+      <p><strong>Name / Brand:</strong> Your Name or Brand</p>
+      <p><strong>Location:</strong> City, Country</p>
+      <p><strong>Nature of Work:</strong> What you do</p>
+    </div>
+
+    <div class="proof-photos">
+      <!-- Placeholder for real photos of workspace, products, or process -->
+    </div>
+
+    <div class="social-links">
+      <p>Connect:</p>
+      <ul>
+        <li>LinkedIn</li>
+        <li>Instagram</li>
+        <li>GitHub</li>
+      </ul>
+    </div>
+
+    <div class="documents">
+      <!-- Placeholder for certificates / registrations if any -->
+    </div>
+  </div>
+</section>
+
 
   <!-- CONTACT SECTION -->
   <section id="contact">
