Add contact section with methods and form

--- a/index.html
+++ b/index.html
@@ -132,10 +132,31 @@
 
   <!-- CONTACT SECTION -->
   <section id="contact">
-    <!-- Email -->
-    <!-- Phone / WhatsApp -->
-    <!-- Contact form -->
-  </section>
+  <div class="contact-container">
+    <h2>Contact</h2>
+
+    <div class="contact-methods">
+      <p><strong>Email:</strong> yourname@example.com</p>
+      <p><strong>Phone / WhatsApp:</strong> +91-XXXXXXXXXX</p>
+    </div>
+
+    <div class="contact-form">
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" />
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message"></textarea>
+
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </div>
+</section>
+
 
   <!-- FOOTER -->
   <footer id="footer">
