Add footer with brand and navigation links
Added footer section with brand information and links.

--- a/index.html
+++ b/index.html
@@ -159,11 +159,24 @@
 
 
   <!-- FOOTER -->
-  <footer id="footer">
-    <!-- Brand -->
-    <!-- Quick links -->
-    <!-- Copyright -->
-  </footer>
+ <footer id="footer">
+  <div class="footer-container">
+    <p><strong>Brand / Name:</strong> Your Name or Brand</p>
+
+    <div class="footer-links">
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Showcase</li>
+        <li>Authenticity</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+
+    <p>&copy; 2025 Your Name or Brand. All rights reserved.</p>
+  </div>
+</footer>
+
 
   <!-- JS -->
   <script src="js/main.js"></script>
